# ChangeLog for app-mobilephone/bitpim
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/bitpim/ChangeLog,v 1.29 2009/06/22 00:03:25 mrness Exp $

  22 Jun 2009; Alin Năstac <mrness@gentoo.org> bitpim-1.0.6-r1.ebuild:
  Use python interpreter returned by distutils eclass (#268862).

*bitpim-1.0.6-r1 (20 Jun 2009)

  20 Jun 2009; Alin Năstac <mrness@gentoo.org> -bitpim-1.0.6.ebuild,
  +bitpim-1.0.6-r1.ebuild:
  Migrate to EAPI 2. Update libusb dependency atom (#270039).

*bitpim-1.0.6 (02 Nov 2008)

  02 Nov 2008; Alin Năstac <mrness@gentoo.org>
  +files/bitpim-1.0.6-ffmpeg_quality.patch, +files/bitpim-1.0.6-gcc43.patch,
  +files/bitpim-1.0.6-gentoo.patch, +files/maketarball,
  +bitpim-1.0.6.ebuild:
  Version bump.

  01 Jul 2008; Alin Năstac <mrness@gentoo.org>
  +files/bitpim-1.0.5-gcc43.patch, bitpim-1.0.5.ebuild:
  Depend unconditionally on dev-python/apsw (#230363). Fix broken build when
  compiled with gcc-4.3 (#230043).

  24 Jun 2008; Alin Năstac <mrness@gentoo.org>
  -files/bitpim-0.9.10-gentoo.patch, -files/bitpim-0.9.13-gentoo.patch,
  -bitpim-0.9.10.ebuild, -bitpim-0.9.13.ebuild, bitpim-1.0.5.ebuild:
  Remove obsolete versions. Remove swig runtime dependency (#221455).

  29 May 2008; Ali Polatel <hawking@gentoo.org> bitpim-0.9.10.ebuild,
  bitpim-0.9.13.ebuild, bitpim-1.0.5.ebuild:
  python_mod_{cleanup,optimize} are ROOT aware.

*bitpim-1.0.5 (09 Feb 2008)

  09 Feb 2008; Steve Arnold <nerdboy@gentoo.org>
  +files/bitpim-1.0.5-ffmpeg_quality.patch,
  +files/bitpim-1.0.5-gentoo.patch, +bitpim-1.0.5.ebuild:
  Updated to latest development release to go with latest wxPython; will
  probably also add the official stable 1.0.0 release, which still works
  with slightly older deps (the new one may have better exception support).
  Needs some python deps updated for ppc arches.
