@@ -1,10 +1,10 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/gammu/Attic/gammu-1.27.0.ebuild,v 1.1 2010/02/01 21:46:20 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/gammu/Attic/gammu-1.27.0.ebuild,v 1.2 2010/02/08 09:03:15 pva Exp $
 
 EAPI="2"
 
-inherit cmake-utils distutils
+inherit eutils cmake-utils distutils
 
 DESCRIPTION="a fork of the gnokii project, a tool to handle your cellular phone"
 HOMEPAGE="http://www.gammu.org"
