@@ -1,6 +1,10 @@
 # ChangeLog for app-mobilephone/gammu
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/gammu/ChangeLog,v 1.79 2010/02/01 21:46:20 fauli Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/gammu/ChangeLog,v 1.80 2010/02/08 09:03:15 pva Exp $
+
+  08 Feb 2010; Peter Volkov <pva@gentoo.org> gammu-1.25.0-r1.ebuild,
+  gammu-1.26.1-r1.ebuild, gammu-1.27.0.ebuild:
+  Add inherit eutils for epatch.
 
 *gammu-1.27.0 (01 Feb 2010)
 
