@@ -1,6 +1,9 @@
 # ChangeLog for app-mobilephone/bitpim
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/bitpim/ChangeLog,v 1.29 2009/06/22 00:03:25 mrness Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-mobilephone/cvs-repo/gentoo-x86/app-mobilephone/bitpim/ChangeLog,v 1.30 2010/02/08 09:03:06 pva Exp $
+
+  08 Feb 2010; Peter Volkov <pva@gentoo.org> bitpim-1.0.6-r1.ebuild:
+  Add inherit eutils for epatch.
 
   22 Jun 2009; Alin Năstac <mrness@gentoo.org> bitpim-1.0.6-r1.ebuild:
   Use python interpreter returned by distutils eclass (#268862).
